# wandermere-family-medicine

./: .gitignore  build.sh  manage.py  pyproject.toml  render.yaml
practice_info/: apps.py  urls.py  views.py
practice_info/templates/practice_info/: about.html  contact.html  home.html  schedule_appointment.html
provider/: admin.py  models.py
provider/migrations/: 0002_provider_name_slug.py  0003_provider_title.py  0004_provider_image.py  0005_alter_provider_image.py  0006_remove_provider_image.py
provider/templates/provider/: provider.html
static/css/: style.css
templates/: base.html  nav.html
wandermere_family_medicine/: asgi.py  pyproject.toml  render.yaml  settings.py  urls.py
wandermere_family_medicine/practice_info/: forms.py  urls.py  views.py
wandermere_family_medicine/practice_info/templates/practice_info/: about.html  contact.html  home.html
wandermere_family_medicine/provider/: models.py  urls.py  views.py
wandermere_family_medicine/provider/migrations/: 0001_initial.py
wandermere_family_medicine/provider/templates/provider/: provider.html
wandermere_family_medicine/static/css/: style.css
wandermere_family_medicine/templates/: base.html  nav.html
wandermere_family_medicine/wandermere_family_medicine/: settings copy.py  settings.py  urls.py  views.py  wsgi copy.py
