[tool.poetry]
name = "wandermere-family-medicine"
version = "0.1.0"
description = ""
authors = ["SamuelGolan <93092697+SamuelGolan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "wandermere_family_medicine"}]

[tool.poetry.dependencies]
python = "3.7"
asgiref = "3.5.2"
django = "4.1.3"
pillow = "9.3.0"
python-slugify = "7.0.0"
sqlparse = "0.4.3"
text-unidecode = "1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
