[tool.poetry]
name = "wandermere_family_medicine"
version = "0.1.0"
description = ""
authors = ["SamuelGolan <93092697+SamuelGolan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "wandermere_family_medicine"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = "<4.0"
asgiref = "^3.6.0"
Pillow = "^9.0.0"
python-slugify = "^8.0.0"
sqlparse = "^0.4.3"
text-unidecode = "^1.3"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
